# api/tenant-user.pb.route.go
@@ -45,4 +45,10 @@ func init() {
 	// Adding Route information for LogoutUserSession RPC
 	route = model.NewRoute("/api/auth/v1/tenant/{tenant}/user/{username}/logout", "POST")
 	RoutesTenantUser = append(RoutesTenantUser, route)
+
+	// Adding Route information for ListTenantOrgUnitsWithRoles RPC
+	route = model.NewRoute("/api/auth/v1/tenant/{tenant}/user/{username}/ous", "GET")
+	route.Resource = "tenant-org-unit-roles"
+	route.Verb = "list"
+	RoutesTenantUser = append(RoutesTenantUser, route)
 }
